--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 /*
 font-family: 'Archivo', sans-serif; -- Subtitle, Texto Corrido (light)
 font-family: 'Frank Ruhl Libre', serif; -- TITLE (Bold)
-font-family: 'Kanit', sans-serif; -- TOPICOS (Bold)
+font-family: 'Kanit', sans-serif; -- TOPICOS (Bold) tam 32
 */
 
 /*Variáveis-------------------------------------------*/
@@ -12,9 +12,19 @@ font-family: 'Kanit', sans-serif; -- TOPICOS (Bold)
     --cor-secundaria: #D0E6F0;
     --cor-action: #EFD593;
     --cor-texto: #051023;
+
+    --texto-corrido: 'Archivo', sans-serif;
+    --texto-titulo: 'Frank Ruhl Libre', serif;
+    --texto-topicos: 'Kanit', sans-serif;
+
+    --margem: 320px;
 }
 
 /*Configuração padrão-------------------------------------------*/
+html{
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -36,7 +46,7 @@ body {
     list-style-type: none;
     display: flex;
     justify-content: end;
-    font-family: 'Archivo', sans-serif;
+    font-family: var(--texto-corrido);
     font-size: 20px;
 }
 
@@ -52,6 +62,7 @@ body {
     display: inline-block;
     color: var(--cor-texto);
     transition: 0.3s ease;
+    text-transform: uppercase;
 }
 
 .nav-list li a:hover {
@@ -71,25 +82,25 @@ body {
     justify-content: center;
     align-items: center;
     margin-left: 320px;
-    margin-right: 65px;
+    margin-right: 50px;
 }
 
 .hero-text h1{
-    font-family: 'Frank Ruhl Libre', serif;
+    font-family: var(--texto-titulo);
     font-size: 80px;
     color: var(--cor-texto);
 }
 
 .hero-text p{
     margin-top: 40px;
-    font-family: 'Archivo', sans-serif;
+    font-family: var(--texto-corrido);
     font-size: 32px;
     color: var(--cor-texto);
 }
 
 .hero-text button{
     margin-top: 40px;
-    font-family: 'Archivo', sans-serif;
+    font-family: var(--texto-corrido);
     font-size: 32px;
     color: var(--cor-texto);
     padding: 20px 40px 20px 40px;
@@ -106,7 +117,7 @@ body {
 .hero-img{
     flex: 1;
     margin-right: 320px;
-    margin-left: 65px;
+    margin-left: 50px;
 }
 
 .hero-img img{
@@ -116,9 +127,54 @@ body {
     height: 600px;
 }
 
+/*Sobre ------------------------------------*/
+.sobre{
+    display: flex;
+    margin-top: 150px;
+    background-color: var(--cor-secundaria);
+    height: 710px;
+    align-items: center;
+    -webkit-box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
+-moz-box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
+box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
+}
+
+.sobre-img{
+    flex: 1;
+    border-radius: 50%;
+    margin-left: var(--margem);
+}
+
+.sobre-img img{
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: 50% 20%;
+}
 
 
+.sobre-text{
+    flex: 2;
+    margin-right: var(--margem);
+    margin-left: 150px;
+}
 
+.sobre-text h2{
+    text-align: start;
+    text-transform: uppercase;
+    font-family: var(--texto-topicos);
+    font-size: 40px;
+    color: var(--cor-action);
+    margin-bottom: 10px;
+    margin-left: 5px;
+}
+
+.sobre-text p{
+    color: var(--cor-texto);
+    font-family: var(--texto-corrido);
+    font-size: 20px;
+}
 
 
 
