--- a/css/style.css
+++ b/css/style.css
@@ -146,8 +146,8 @@ body {
     min-height: 710px;
     align-items: center;
     -webkit-box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
--moz-box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
-box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
+    -moz-box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
+    box-shadow: 0px 10px 25px 0px rgb(221, 221, 221);
 }
 
 .sobre-img{
@@ -193,6 +193,7 @@ box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
     display: flex;
     margin-top: 100px;
     align-items: center;
+    padding-bottom: 100px;
 }
 
 .cf-text{
@@ -221,8 +222,66 @@ box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
     margin-left: 20px;
 }
 
+/*Topicos trabalhados --------------------------------------*/
+.topicos-trabalhados{
+    background-color: var(--cor-secundaria);
+    border-radius: 2px;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    max-width: 100vw;
+    -webkit-box-shadow: 0px 5px 10px 3px rgba(194,194,194,1);
+    -moz-box-shadow: 0px 5px 10px 3px rgba(194,194,194,1);
+    box-shadow: 0px 5px 10px 3px rgba(194,194,194,1);
+}
 
+.topicos-trabalhados h2{
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--cor-action);
+    font-family: var(--texto-topicos);
+    font-size: var(--tam-topicos);
+}
 
+.topicos-trabalhados p{
+    text-align: center;
+    color: var(--cor-texto);
+    font-family: var(--texto-corrido);
+    font-size: var(--tam-corrido);
+    padding-bottom: 20px;
+}
+
+.topicos-trabalhados ul{
+    column-count: 3;
+    gap: 40px;
+    margin: 0 280px 0 280px;
+    list-style: none;
+    text-transform: capitalize;
+    color: var(--cor-texto);
+    font-family: var(--texto-corrido);
+    font-size: var(--tam-corrido);
+    max-width: 100%;
+    min-height: 100%;
+}
+
+.topicos-trabalhados ul li{
+    
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: var(--cor-primaria);
+    border-radius: 2px;
+    -webkit-box-shadow: 0px 20px 25px -1px rgba(163,163,163,1);
+    -moz-box-shadow: 0px 20px 25px -1px rgba(163,163,163,1);
+    box-shadow: 0px 20px 25px -1px rgba(163,163,163,1);
+    transition: transform 0.3s ease;
+}
+
+.topicos-trabalhados ul li:hover{
+    transform: translateY(-10px);
+    font-weight: bold;
+}
 
 /*Configuração do navegador (Scrollbar e mouse selection)*/
 ::-webkit-scrollbar{
