--- a/css/style.css
+++ b/css/style.css
@@ -602,7 +602,15 @@ footer{
     font-size: var(--tam-corrido);
 }
 
-footer > p,a{
+.creditos p{
+    color: var(--cor-primaria);
+    font-family: var(--texto-corrido);
+    font-size: 16px;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.creditos a{
     color: var(--cor-primaria);
     font-family: var(--texto-corrido);
     font-size: 16px;
